Removing unnecessary enable preview from tests.